Updated Some Functionaltiy

--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -12,38 +12,38 @@
 <body>
     <header>
             <p>Compilers For Coding</p>
-        <div class="fab-container">
-            <div class="fab fab-icon-holder">
-                <i class="fa fa-bars" style="font-size:35px"></i>
+            <div class="fab-container">
+                <div class="fab fab-icon-holder">
+                    <i class="fa fa-th-large" style="font-size:40px"></i>
+                </div>
+        
+                <ul class="fab-options">
+                    <li>
+                        <span class="fab-label"><a href="./index(practise).htm">Home</a></span>
+                        <div class="fab-icon-holder">
+                            <i class="fa fa-h-square" style="color:black;font-size:50px"></i>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
+                        <div class="fab-icon-holder">
+                            <i class="fa fa-file-code-o" style="color:black;font-size:40px;padding:0px"></i>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
+                        <div class="fab-icon-holder">
+                            <i class="fa fa-outdent" style="color:black;font-size:38px;"></i>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
+                        <div class="fab-icon-holder">
+                            <i class="fa fa-group" style="color:black;font-size:38px;padding:5px"></i>
+                        </div>
+                    </li>
+                </ul>
             </div>
-    
-            <ul class="fab-options">
-                <li>
-                    <span class="fab-label">Home</span>
-                    <div class="fab-icon-holder">
-                        <i class="fa fa-house"><a href="./index(practise).htm"></a></i>
-                    </div>
-                </li>
-                <li>
-                    <span class="fab-label">Editors</span>
-                    <div class="fab-icon-holder">
-                        <i class="fa-solid fa-square-pen"><a href="./EDITORS(practise).html" target="new_2"></a></i>
-                    </div>
-                </li>
-                <li>
-                    <span class="fab-label">Compilers</span>
-                    <div class="fab-icon-holder">
-                        <i class="fa-duotone fa-browser"><a href="./COMPILERS(practise).html" traget="new_3"></a></i>
-                    </div>
-                </li>
-                <li>
-                    <span class="fab-label">Contact</span>
-                    <div class="fab-icon-holder">
-                        <i class="fa-solid fa-people-group"><a href="./CONTACT(prctise).html" target="new_4"></a></i>
-                    </div>
-                </li>
-            </ul>
-        </div>
         </header>
         <div class="content-area">
             <h3>Que: What is Compiler?</h3>
