--- a/CONTACT(prctise).html
+++ b/CONTACT(prctise).html
@@ -25,9 +25,8 @@
             <br>
             <br>
             <div class="hl"></div>
-            <p>For Face to Face visit contact us as given address;</p>
-            <p>Address: Uma Nasta House, Gozaria, Mehsana, Gujarat, India.</p>
-            <p>Mobile no: 8320741851</p>
+            <p>Address:Gozaria, Mehsana, Gujarat, India.</p>
+            <p>Mobile no:*******851</p>
         </div>
          <div class="flex_container">
          <a href="#" class="fa fa-facebook" id="flex_1"></a>
