--- a/index(practise).htm
+++ b/index(practise).htm
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index(practise).css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
         <header>
@@ -20,31 +21,27 @@
     </div>            
     <ul class="fab-options">
         <li>
-            <span class="fab-label">Home</span>
+            <span class="fab-label"><a href="./index(practise).htm" >Home</a></span>
             <div class="fab-icon-holder">
                 <span class="material-symbols-rounded">home</span>
-                    <a href="./index(practise).htm" ></a>
             </div>
         </li>
         <li>
-            <span class="fab-label">Editors</span>
+                <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
             <div class="fab-icon-holder">
                 <span class="material-symbols-rounded">rebase_edit</span>
-                <a href="./EDITORS(practise).html"></a>
             </div>
         </li>
         <li>
-            <span class="fab-label">Compilers</span>
+            <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
             <div class="fab-icon-holder">
                 <span class="material-symbols-rounded">smart_button <a href="./COMPILERS(practise).html"></a></span>
-               
             </div>
         </li>
         <li>
-            <span class="fab-label">Contact Us</span>
+                <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
             <div class="fab-icon-holder">
                 <span class="material-symbols-rounded">diversity_2</span>
-                <a href="./CONTACT(prctise).html"></a>
             </div>
         </li>
     </ul>
@@ -90,22 +87,22 @@
 <h2>Student Activities</h2>
 <br>
 <div class="flex_container">
-<div class="box_model" id="item_1">Live Events
+<div class="box_model" id="item_1" data-aos="zoom-in-down" data-aos-once="true">Live Events
     <br><br>
     <h4>Learn something new everday!</h4>
     <img src="Images/live events.png">
 </div>
-<div class="box_model" id="item_2">Blogs
+<div class="box_model" id="item_2" data-aos="zoom-in-down" data-aos-once="true">Blogs
     <br><br>
     <h4>Let's read today, to be leader tomorrow</h4>
     <img src="Images/blog.png">
 </div>
-<div class="box_model" id="item_3">Newsletter
+<div class="box_model" id="item_3" data-aos="zoom-in-down" data-aos-once="true">Newsletter
     <br><br>
     <h4>Know what is going on world</h4>
     <img src="Images/newsletter.png">
 </div>
-<div class="box_model" id="item_4">Achievements
+<div class="box_model" id="item_4" data-aos="zoom-in-down" data-aos-once="true">Achievements
     <br><br>
     <h4>Take look at our hall of fame</h4>
     <img src="Images/achievements.png">
@@ -123,4 +120,8 @@
 <h6>Copyright reserved by LET'S CODE</h6>
 </div>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 </html>
