--- a/EDITORS(practise).html
+++ b/EDITORS(practise).html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDITORS FOR CODING</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="editors.css">
 </head>
 <body>
@@ -12,32 +14,32 @@
         <p>Editors For Coding</p>
         <div class="fab-container">
             <div class="fab fab-icon-holder">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa fa-th-large" style="font-size:40px"></i>
             </div>
     
             <ul class="fab-options">
                 <li>
-                    <span class="fab-label">Home</span>
+                    <span class="fab-label"><a href="./index(practise).htm">Home</a></span>
                     <div class="fab-icon-holder">
-                        <i class="fa-solid fa-house"><a href="./index(practise).htm" target="new"></a></i>
+                        <i class="fa fa-h-square" style="color:black;font-size:50px"></i>
                     </div>
                 </li>
                 <li>
-                    <span class="fab-label">Editors</span>
+                    <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
                     <div class="fab-icon-holder">
-                        <i class="fa-solid fa-square-pen"><a href="./EDITORS(practise).html" target="new"></a></i>
+                        <i class="fa fa-file-code-o" style="color:black;font-size:40px;padding:0px"></i>
                     </div>
                 </li>
                 <li>
-                    <span class="fab-label">Compilers</span>
+                    <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
                     <div class="fab-icon-holder">
-                        <i class="fa-duotone fa-browser"><a href="./COMPILERS(practise).html" traget="new"></a></i>
+                        <i class="fa fa-outdent" style="color:black;font-size:38px"></i>
                     </div>
                 </li>
                 <li>
-                    <span class="fab-label">Contact</span>
+                    <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
                     <div class="fab-icon-holder">
-                        <i class="fa-solid fa-people-group"><a href="./CONTACT(prctise).html" target="new"></a></i>
+                        <i class="fa fa-group" style="color:black;font-size:38px;padding:5px"></i>
                     </div>
                 </li>
             </ul>
