--- a/CONTACT(prctise).html
+++ b/CONTACT(prctise).html
@@ -7,6 +7,7 @@
     <title>MEET OUR TEAM</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="icon" href="./Images/20230220_182100_0001-removebg-preview.png">
 </head>
 <body>
     <header>MEET OUR TEAM</header>
@@ -19,24 +20,30 @@
         <ul>
         </div>
         <div class="share">
-            <h3>For Contact me you can Visit my Social media platforms that all you are using... </h3>
-            <button id="hover">Follow Me</button>
-            <button id="hover">Join Now</button>
-            <br>
-            <br>
-            <div class="hl"></div>
-            <p>Address:Gozaria, Mehsana, Gujarat, India.</p>
-            <p>Mobile no:*******851</p>
+            <h2>Reach Out to Me</h2>
+            <form action="" method="">
+                <div class="input">
+                    <label for="Name" class="jss33">Name</label>
+                    <input placeholder="Enter Name" type="text" name="name" class="form-input jss31" value="" required>
+                </div>
+                <div class="input">
+                    <label for="Email" class="jss33">Email</label>
+                    <input placeholder="abc123@gmail.com" type="email" name="email" class="form-input jss31" value="" required>
+                </div>
+                <div class="input">
+                    <label for="Message" class="jss33">Message</label>
+                    <textarea placeholder="Type your Message...." type="text" name="message" class="form-message jss32" required></textarea>
+                </div>
+                <button href="sendto:patelabhideep02@gmail.com">Send</button>
+            </form>
         </div>
          <div class="flex_container">
-         <a href="#" class="fa fa-facebook" id="flex_1"></a>
-         <a href="https://www.linkedin.com/in/abhi-patel-43b316252/" class="fa fa-linkedin" id="flex_3"></a>
-         <a href="https://www.instagram.com/abhi_y_patel/" class="fa fa-instagram" id="flex_4"></a>
-         <a href="" class="fa fa-telegram" id="flex_5"></a>
-         <a href="#" class="fa fa-youtube" id="flex_6"></a>
+            <ul>
+                <li><a href="https://github.com/abhipatel2005" id="profile-link" target="_blank"><i class="fa fa-github" id="profile-link"></i></a></li>
+                <li><a href="https://www.freecodecamp.org/abhipatel1502" id="profile-link" target="_blank"><i class="	fa fa-free-code-camp"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/abhipatel2005"><i class="fa fa-linkedin-square" id="profile-link" target="_blank"></i></a></li>
+                <li><a href="https://instagram.com/abhi_y_patel?igshid=ZDdkNTZiNTM="><i class="fa fa-instagram" id="profile-link" target="_blank"></i></a></li>
+              </ul>
          </div>
-         
-    <!--<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="abhipatel2005" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/abhipatel2005?trk=profile-badge"> <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript">Abhi Patel</script></a></div>
-          <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>-->
 </body>
 </html>
