--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPILERS FOR CODING</title>
     <link rel="stylesheet" href="compilers.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="./Images/20230220_182100_0001-removebg-preview.png">
 </head>
 <body>
     <header>
