--- a/EDITORS(practise).html
+++ b/EDITORS(practise).html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="editors.css">
+    <link rel="icon" href="./Images/20230220_182100_0001-removebg-preview.png">
 </head>
 <body>
     <header>
