--- a/CONTACT(prctise).html
+++ b/CONTACT(prctise).html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEET OUR TEAM</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="icon" href="./Images/20230220_182100_0001-removebg-preview.png">
 </head>
 <body>
-    <header>MEET OUR TEAM</header>
+    <header>CONTACT US</header>
         <div class="founder">
         <img src="./Images/IMG-20220806-WA0000.jpg">
         <ul>
