--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="compilers.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="./Images/20230220_182100_0001-removebg-preview.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -55,11 +56,11 @@
 <br>
 <br>
 <div class="facts">
-    <img src="Images/C.png">
-    <img src="Images/C++.png">
-    <img src="Images/JAVA.png">
-    <img src="Images/JAVA SCRIPT.png">
-    <img src="Images/PYTHON.png">
+    <img src="Images/C.png" data-aos="flip-left" data-aos-once="true">
+    <img src="Images/C++.png" data-aos="flip-right" data-aos-once="true">
+    <img src="Images/JAVA.png" data-aos="flip-left" data-aos-once="true">
+    <img src="Images/JAVA SCRIPT.png" data-aos="flip-right" data-aos-once="true">
+    <img src="Images/PYTHON.png" data-aos="flip-left" data-aos-once="true">
 </div>
 <br>
 <br>
@@ -79,13 +80,17 @@
     <br>
     <br>
     <div class="bottom">
-            <img src="Images/logo.jpg" alt="logo">
-            <p>LET'S CODE</p>
-            <p>Learn | Understand | Grow</p>
-            <br>
-            <p>Let's Code is the new age student community,by the students all around the globe to collebrate,network and grow</p>
-            <p>By Joining a Let's Code, student's grow their knowledgein a peer-to-peer learning environment and build solutions for local business and their community.Let's Code provide bridge between campus to corporate</p>
+        <img src="Images/logo.jpg" alt="logo">
+        <p>LET'S CODE</p>
+        <p>Learn | Understand | Grow</p>
+        <br>
+        <p>Let's Code is the new age student community,by the students all around the globe to collebrate,network and grow</p>
+        <p>By Joining a Let's Code, student's grow their knowledgein a peer-to-peer learning environment and build solutions for local business and their community.Let's Code provide bridge between campus to corporate</p>
         <h6>Copyright reserved by LET'S CODE</h6>
-        </div>
-</body>
+    </div>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+    </body>
 </html>
