--- a/CONTACT(prctise).html
+++ b/CONTACT(prctise).html
@@ -34,7 +34,7 @@
                     <label for="Message" class="jss33">Message</label>
                     <textarea placeholder="Type your Message...." type="text" name="message" class="form-message jss32" required></textarea>
                 </div>
-                <button href="sendto:patelabhideep02@gmail.com">Send</button>
+                <button>Send</button>
             </form>
         </div>
          <div class="flex_container">
