--- a/index.htm
+++ b/index.htm
@@ -78,11 +78,11 @@
     <button>Robotics</button>
     <br>
     <!--images for revoloves-->
-    <img src="Images/C.png" alt="C">
-    <img src="Images/C++.png" alt="CPP">
-    <img src="Images/JAVA.png" alt="JAVA">
-    <img src="Images/JAVA SCRIPT.png" alt="JAVASCRIPT">
-    <img src="Images/PYTHON.png" alt="PYTHON">
+    <img src="Images/C.png" alt="C" data-aos="zoom-in-down">
+    <img src="Images/C++.png" alt="CPP" data-aos="zoom-in-down">
+    <img src="Images/JAVA.png" alt="JAVA" data-aos="zoom-in-down">
+    <img src="Images/JAVA SCRIPT.png" alt="JAVASCRIPT" data-aos="zoom-in-down">
+    <img src="Images/PYTHON.png" alt="PYTHON" data-aos="zoom-in-down">
 </div>
 <br>
 <h2>Student Activities</h2>
