--- a/EDITORS(practise).html
+++ b/EDITORS(practise).html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="editors.css">
     <link rel="icon" href="./Images/20230220_182100_0001-removebg-preview.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -58,24 +59,24 @@
     <br>
     <div class="images">
     <div class="img">
-    <img src="Images/Visual_Studio_Code_1.35_icon.svg.png">
-    <p style="color:black;">Visual Studio Code</p>
+    <img src="Images/Visual_Studio_Code_1.35_icon.svg.png" data-aos="flip-up" data-aos-once="true">
+    <p style="color:black;" data-aos="fade-left">Visual Studio Code</p>
 </img>
     </div>
     <div class="img">
-        <img src="Images/Notepad++_Logo.svg.png">
-        <p style="color:black;">Notepad++</p>
+        <img src="Images/Notepad++_Logo.svg.png" data-aos="flip-up" data-aos-once="true">
+        <p style="color:black;" data-aos="fade-left">Notepad++</p>
     </img>
     </img>
         </div>
         <div class="img">
-            <img src="Images/images (1).jpeg">
-            <p style="color:black;">Sublime</p>
+            <img src="Images/images (1).jpeg" data-aos="flip-up" data-aos-once="true">
+            <p style="color:black;" data-aos="fade-left">Sublime</p>
         </img>
             </div>
             <div class="img">
-                <img src="Images/images.jpeg">
-                <p style="color:black;">Atoms</p>
+                <img src="Images/images.jpeg" data-aos="flip-up" data-aos-once="true">
+                <p style="color:black;" data-aos="fade-left">Atoms</p>
             </img>
                 </div>
     </div>
@@ -98,5 +99,9 @@
         <p>By Joining a Let's Code, student's grow their knowledgein a peer-to-peer learning environment and build solutions for local business and their community.Let's Code provide bridge between campus to corporate</p>
     <h6>Copyright reserved by LET'S CODE</h6>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+          </script>
 </body>
 </html>
