--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -39,7 +39,7 @@
                     <li>
                         <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
                         <div class="fab-icon-holder">
-                            <i class="fa fa-group" style="color:black;font-size:38px;padding:5px"></i>
+                            <i class="fa fa-group" style="color:black;font-size:38px;padding:5px" href="./CONTACT(prctise).html"></i>
                         </div>
                     </li>
                 </ul>
