--- a/EDITORS(practise).html
+++ b/EDITORS(practise).html
@@ -21,28 +21,28 @@
     
             <ul class="fab-options">
                 <li>
-                    <span class="fab-label"><a href="./index(practise).htm">Home</a></span>
                     <div class="fab-icon-holder">
                         <i class="fa fa-h-square" style="color:black;font-size:50px"></i>
                     </div>
+                    <span class="fab-label"><a href="./index(practise).htm">Home</a></span>
                 </li>
                 <li>
-                    <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
                     <div class="fab-icon-holder">
                         <i class="fa fa-file-code-o" style="color:black;font-size:40px;padding:0px"></i>
                     </div>
+                    <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
                 </li>
                 <li>
-                    <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
                     <div class="fab-icon-holder">
                         <i class="fa fa-outdent" style="color:black;font-size:38px"></i>
                     </div>
+                    <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
                 </li>
                 <li>
-                    <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
                     <div class="fab-icon-holder">
                         <i class="fa fa-group" style="color:black;font-size:38px;padding:5px"></i>
                     </div>
+                    <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
                 </li>
             </ul>
         </div>
@@ -58,35 +58,30 @@
     <br>
     <br>
     <div class="images">
-    <div class="img">
-    <img src="Images/Visual_Studio_Code_1.35_icon.svg.png" data-aos="flip-up" data-aos-once="true">
-    <p style="color:black;" data-aos="fade-left">Visual Studio Code</p>
-</img>
-    </div>
-    <div class="img">
-        <img src="Images/Notepad++_Logo.svg.png" data-aos="flip-up" data-aos-once="true">
-        <p style="color:black;" data-aos="fade-left">Notepad++</p>
-    </img>
-    </img>
+        <div class="img">
+            <img src="Images/Visual_Studio_Code_1.35_icon.svg.png" data-aos="flip-up" data-aos-once="true">
+            <p style="color:black;" data-aos="fade-left">Visual Studio Code</p>
+        </div>
+        <div class="img">
+            <img src="Images/Notepad++_Logo.svg.png" data-aos="flip-up" data-aos-once="true">
+            <p style="color:black;" data-aos="fade-right">Notepad++</p>
         </div>
         <div class="img">
             <img src="Images/images (1).jpeg" data-aos="flip-up" data-aos-once="true">
             <p style="color:black;" data-aos="fade-left">Sublime</p>
-        </img>
-            </div>
-            <div class="img">
-                <img src="Images/images.jpeg" data-aos="flip-up" data-aos-once="true">
-                <p style="color:black;" data-aos="fade-left">Atoms</p>
-            </img>
-                </div>
+        </div>
+        <div class="img">
+            <img src="Images/images.jpeg" data-aos="flip-up" data-aos-once="true">
+            <p style="color:black;" data-aos="fade-right">Atoms</p>
+        </div>
     </div>
     <br>
     <div class="links">
-        <a href="https:/code.visualstudio.com">Visual Studio Code</a>
-     <a href="https://atom.io">Atoms</a>
-     <a href="https://notepad-plus-plus.org">Notepad++</a>
-     <a href="https://www.sublimetext.com">Sublime</a>
-     <a href="#">Know More About Editors</a>
+        <a href="https:/code.visualstudio.com" data-aos="zoom-out-right" data-aos-once="true">Visual Studio Code</a>
+        <a href="https://atom.io" data-aos="zoom-out-left" data-aos-once="true">Atoms</a>
+        <a href="https://notepad-plus-plus.org" data-aos="zoom-out-right" data-aos-once="true">Notepad++</a>
+        <a href="https://www.sublimetext.com" data-aos="zoom-out-left" data-aos-once="true">Sublime</a>
+        <a href="#" data-aos="zoom-out-right" data-aos-once="true">Know More About Editors</a>
     </div>
     <br>
     <br>
@@ -102,6 +97,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
             AOS.init();
-          </script>
-</body>
+        </script>
+    </body>
 </html>
