--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
     </div>            
     <ul class="fab-options">
         <li>
-            <span class="fab-label"><a href="./index(practise).htm" >Home</a></span>
+            <span class="fab-label"><a href="./index.htm">Home</a></span>
             <div class="fab-icon-holder">
                 <span class="material-symbols-rounded">home</span>
             </div>
