--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -19,7 +19,7 @@
         
                 <ul class="fab-options">
                     <li>
-                        <span class="fab-label"><a href="./index(practise).htm">Home</a></span>
+                        <span class="fab-label"><a href="./index.htm">Home</a></span>
                         <div class="fab-icon-holder">
                             <i class="fa fa-h-square" style="color:black;font-size:50px"></i>
                         </div>
