--- a/EDITORS(practise).html
+++ b/EDITORS(practise).html
@@ -24,7 +24,7 @@
                     <div class="fab-icon-holder">
                         <i class="fa fa-h-square" style="color:black;font-size:50px"></i>
                     </div>
-                    <span class="fab-label"><a href="./index(practise).htm">Home</a></span>
+                    <span class="fab-label"><a href="./index.htm">Home</a></span>
                 </li>
                 <li>
                     <div class="fab-icon-holder">
