--- a/EDITORS(practise).html
+++ b/EDITORS(practise).html
@@ -12,13 +12,42 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <p>Editors For Coding</p>
-        <div class="fab-container">
+    <header>Editors For Coding</header>
+    <div class="fab-container">
+        <div class="fab fab-icon-holder">
+            <i class="fa fa-th-large" style="font-size:40px"></i>
+        </div>
+        <ul class="fab-options">
+            <li>
+                <div class="fab-icon-holder">
+                    <i class="fa fa-h-square" style="color:black;font-size:50px"></i>
+                </div>
+                <span class="fab-label"><a href="./index.htm">Home</a></span>
+            </li>
+            <li>
+                <div class="fab-icon-holder">
+                    <i class="fa fa-file-code-o" style="color:black;font-size:40px;padding:0px"></i>
+                </div>
+                <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
+            </li>
+            <li>
+                <div class="fab-icon-holder">
+                    <i class="fa fa-outdent" style="color:black;font-size:38px;"></i>
+                </div>
+                <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
+            </li>
+            <li>
+                <div class="fab-icon-holder">
+                    <i class="fa fa-group" style="color:black;font-size:38px;padding:5px" href="./CONTACT(prctise).html"></i>
+                </div>
+                <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
+            </li>
+        </ul>
+    </div>
+        <!-- <div class="fab-container">
             <div class="fab fab-icon-holder">
                 <i class="fa fa-th-large" style="font-size:40px"></i>
             </div>
-    
             <ul class="fab-options">
                 <li>
                     <div class="fab-icon-holder">
@@ -45,14 +74,12 @@
                     <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
                 </li>
             </ul>
-        </div>
-            </header>
+        </div> -->
     <h3>Que: What is Editor? </h3>
     <h4>Ans: Code editor means a page for writing the code where we write the code.</h4>
     <h3>Que: Why is it required?</h3>
     <h4>Ans: Basically there are too many platforms to write the code but in a particular platform you will have a better facilities to code and it may help you to find errors and too much other supports.</h4>
-<br>
-
+    <br>
     <p style="color:black; font-weight:700; font-size:20px">Here are some Editors which are popular....</p>
     <p style="color:black; font-weight:700; font-size:20px">I have also attched the link of that to download just simply click the button of that app to download it...</p>
     <br>
