--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -78,26 +78,11 @@
         <h4>Python is an interpreted programming language i.e. the software present in the computer reads the Python code and gives the instructions to the machine. That's why it has no compiler</h4>
         <span class="read">Read More</span>
     </a>
-    <a href="" class="comp" data-aos="flip-right" data-aos-once="true">
-        <h1 id="white">Know More</h1>
+    <a href="https://www.google.com" class="comp" data-aos="flip-right" data-aos-once="true" id="white">
+        Know More
         <span class="read">Let's Go...!</span>
     </a>
 </div>
-    <!-- <br>
-    <br>
-    <br>
-    <p style="color:black; font-weight: 700; font-size:20px;">Here, We provide you links from which you can easily download your compiler from most trusted website....,</p>
-    <p style="color:black; font-weight: 700; font-size: 20px;">Follow the links to DOWNLOAD</p> -->
-    <!-- <br>
-    <br>
-<div class="links">
-     <a href="https://sourceforge.net">C Compiler</a>
-     <a href="https://sourceforge.net">C++ Compiler</a>
-     <a href="https://www.oracle.com">Java Compiler</a>
-     <a href="https://v8.dev">Java Script Compiler</a>
-     <a href="https://www.python.org">Python Compiler</a>
-     <a href="https://www.google.com">Know More About Compiler</a>
-</div> -->
     <br>
     <br>
     <div class="bottom">
