--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -78,10 +78,10 @@
         <h4>Python is an interpreted programming language i.e. the software present in the computer reads the Python code and gives the instructions to the machine. That's why it has no compiler</h4>
         <span class="read">Read More</span>
     </a>
-    <a href="https://www.google.com" class="comp" data-aos="flip-right" data-aos-once="true" id="white">
+    <!-- <a href="https://www.google.com" class="comp" data-aos="flip-right" data-aos-once="true" id="white">
         Know More
         <span class="read">Let's Go...!</span>
-    </a>
+    </a> -->
 </div>
     <br>
     <br>
