--- a/COMPILERS(practise).html
+++ b/COMPILERS(practise).html
@@ -19,25 +19,25 @@
                 <ul class="fab-options">
                     <li>
                         <div class="fab-icon-holder">
-                            <i class="fa fa-h-square" style="color:black;font-size:50px"></i>
+                            <i class="fa fa-h-square" style="font-size:50px"></i>
                         </div>
                         <span class="fab-label"><a href="./index.htm">Home</a></span>
                     </li>
                     <li>
                         <div class="fab-icon-holder">
-                            <i class="fa fa-file-code-o" style="color:black;font-size:40px;padding:0px"></i>
+                            <i class="fa fa-file-code-o" style="font-size:40px;padding:0px"></i>
                         </div>
                         <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
                     </li>
                     <li>
                         <div class="fab-icon-holder">
-                            <i class="fa fa-outdent" style="color:black;font-size:38px;"></i>
+                            <i class="fa fa-outdent" style="font-size:38px;"></i>
                         </div>
                         <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
                     </li>
                     <li>
                         <div class="fab-icon-holder">
-                            <i class="fa fa-group" style="color:black;font-size:38px;padding:5px" href="./CONTACT(prctise).html"></i>
+                            <i class="fa fa-group" style="font-size:38px;padding:5px" href="./CONTACT(prctise).html"></i>
                         </div>
                         <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
                     </li>
