Refactored the Code

--- a/compilers.html
+++ b/compilers.html
@@ -27,19 +27,19 @@
                         <div class="fab-icon-holder">
                             <i class="fa fa-file-code-o" style="font-size:40px;padding:0px"></i>
                         </div>
-                        <span class="fab-label"><a href="./EDITORS(practise).html">Editors</a></span>
+                        <span class="fab-label"><a href="./editors.html">Editors</a></span>
                     </li>
                     <li>
                         <div class="fab-icon-holder">
                             <i class="fa fa-outdent" style="font-size:38px;"></i>
                         </div>
-                        <span class="fab-label"><a href="./COMPILERS(practise).html">Compilers</a></span>
+                        <span class="fab-label"><a href="./compilers.html">Compilers</a></span>
                     </li>
                     <li>
                         <div class="fab-icon-holder">
                             <i class="fa fa-group" style="font-size:38px;padding:5px" href="./CONTACT(prctise).html"></i>
                         </div>
-                        <span class="fab-label"><a href="./CONTACT(prctise).html">Contact Us</a></span>
+                        <span class="fab-label"><a href="./contact.html">Contact Us</a></span>
                     </li>
                 </ul>
             </div>
