--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <img src="./Images/IMG-20220806-WA0000.jpg">
         <ul>
         <li>Abhi Patel</li>
-        <li>Learner</li>
+        <li>Learner | Dreamer</li>
         <li>VGEC CHANDKHEDA</li>
         <ul>
         </div>
